traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:10: error: ';' expected but 'else' found.
  } else {
    ^